# src/main/java/com/opencourse/cgcoursescrm/controller/dto/UserDto.java
@@ -5,22 +5,20 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 public class UserDto {
 
     @JsonProperty("user_id")
-    private String userId;
-    private String role;
+    private final String userId;
+    private final String role;
     @JsonProperty("first_name")
-    private String firstName;
+    private final String firstName;
     @JsonProperty("last_name")
-    private String secondName;
-    private String email;
-    private String password;
+    private final String secondName;
+    private final String email;
     @JsonProperty("created_at")
-    private String createdAt;
+    private final String createdAt;
+    private final String password;
 
-    public UserDto() {
 
-    }
 
-    public UserDto(String userId, String role, String firstName, String secondName, String email, String password, String createdAt) {
+    public UserDto(String userId, String role, String firstName, String secondName, String email, String createdAt, String password) {
         this.userId = userId;
         this.role = role;
         this.firstName = firstName;
@@ -34,56 +32,28 @@ public class UserDto {
         return userId;
     }
 
-    public void setUserId(String userId) {
-        this.userId = userId;
-    }
-
     public String getRole() {
         return role;
-    }
-
-    public void setRole(String role) {
-        this.role = role;
     }
 
     public String getFirstName() {
         return firstName;
     }
 
-    public void setFirstName(String firstName) {
-        this.firstName = firstName;
-    }
-
     public String getSecondName() {
         return secondName;
-    }
-
-    public void setLastName(String lastName) {
-        this.secondName = lastName;
     }
 
     public String getEmail() {
         return email;
     }
 
-    public void setEmail(String email) {
-        this.email = email;
-    }
-
     public String getPassword() {
         return password;
     }
 
-    public void setPassword(String password) {
-        this.password = password;
-    }
-
     public String getCreatedAt() {
         return createdAt;
-    }
-
-    public void setCreatedAt(String createdAt) {
-        this.createdAt = createdAt;
     }
 
     @Override
